# PyOmnix

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: __init__.py
src/DaySpark/: data_plot.py  logger.py  utils.py
src/PyOmnix/: __init__.py  airflow_interface.py  consts.py  data_manipulator.py  data_plot.py  flow.py  logger.py  models.py  ominix_logger.py  omnix_logger.py  utils.py
src/PyOmnix/agents/: edges.py  graphs.py  gui.py  main_react.py  models.py  models_settings.py  nodes.py  prompts.py  runnables.py  schemas.py  states.py  storage.py  tools.py
src/PyOmnix/data_process/: __init__.py  data_manipulator.py  easy_gui.py
src/PyOmnix/docs/: workflow.md
src/PyOmnix/examples/: airflow_example_deprecated.py  workflow_example.py
src/PyOmnix/financial/: __init__.py  api.py  api_utils.py  backtester.py  data_analyzer.py  data_models.py  financial-structure.md  llm_clients.py  llm_interaction_logger.py  main.py  market_utils.py  news_crawler.py  openrouter_config.py  structured_terminal.py  test_backtest.py  unified_api.py
src/PyOmnix/financial/agents/: __init__.py  ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  debate_room.py  fundamentals.py  market_data.py  michael_burry.py  peter_lynch.py  phil_fisher.py  portfolio_manager.py  researcher_bear.py  researcher_bull.py  risk_manager.py  sentiment.py  serialization.py  stanley_druckenmiller.py  state.py  technicals.py  valuation.py  warren_buffett.py
src/PyOmnix/financial/backend/: main.py
src/PyOmnix/financial/backend/models/: api_models.py
src/PyOmnix/financial/backend/routers/: agents.py  analysis.py  api_runs.py  logs.py  runs.py  workflow.py
src/PyOmnix/financial/backend/services/: analysis.py
src/PyOmnix/financial/backend/storage/: base.py  memory.py
src/PyOmnix/financial/backend/utils/: api_utils.py  context_managers.py
src/PyOmnix/financial/utils/: analysts.py  display.py  llm.py  progress.py  visualize.py
src/PyOmnix/model_interface/: model_flow.py  models.py
src/PyOmnix/pltconfig/: matplotlib_config_tex_pgf.py  plot_config_notex.py  plot_config_tex.py  plot_config_tex_pgf.py
src/PyOmnix/utils/: __init__.py  data.py  env.py  files.py  gdrive.py  math.py  plot.py
src/pyomnix/: __init__.py  consts.py
src/pyomnix/agents/: models_settings.py  schemas.py  templates.py
src/pyomnix/data_process/: data_manipulator.py  data_splitter.py
src/pyomnix/pltconfig/: plot_config_tex.py  plot_config_tex_pgf.py
src/pyomnix/skills/: SKILL.md  examples.md  reference.md
src/pyomnix/utils/: data.py  plot.py
tests/: test_logger.py  test_plot_saving.py  test_plotting_canvas.py
