[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyomnix"
version = "0.1b1"
description = "Integrated Tools for Scientific Computing and Data Analysis"
authors = [{name="Dongkai", email="dongkai001@e.ntu.edu.sg"}]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "plotly",
    "kaleido==0.1.0.post1",
    "jupyter",
    "dash",
    "prefect",
    "langchain",
    "langchain-deepseek",
    "langchain-huggingface",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-community",
]

[project.optional-dependencies]
gui = ["PyQt6"]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyomnix*"]
exclude = ["tests*", "docs*", "examples*", "*.tests", "*.tests.*"]

[project.scripts]
gui_pan_color = "pyomnix.data_plot:DataPlot.gui_pan_color"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pyomnix = ["pltconfig/pan_color.json"]