[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyomnix"
version = "0.2"
description = "Integrated Tools for Scientific Computing, Data Analysis, and AI Development"
authors = [
    {name = "Dongkai", email = "dongkai001@e.ntu.edu.sg"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "data-analysis",
    "scientific-computing",
    "ai",
    "machine-learning",
    "visualization",
]
urls = {Homepage = "https://github.com/panasee/PyOmnix", Repository = "https://github.com/panasee/PyOmnix.git"}
dependencies = [
    "pillow",
    "numpy",
    "pandas",
    "matplotlib",
    "waitress",
    "plotly>=6.4.0",
    "kaleido>=1.2.0",
    "jupyter",
    "anywidget",
    "dash",
    "rich",
    "prefect>=3.2.9",
    "langchain>=1.2.0",
    "langgraph>=1.0.0",
    "langchain-deepseek",
    "langchain-huggingface",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-google-vertexai",
    "langchain-google-community",
    "langchain-community",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.0.0",
    "questionary",
    "fsspec>=2024.0.0",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "pydata_google_auth",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "psycopg[binary,pool]>=3.1.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.7.0",
    "PyQt6-WebEngine>=6.7.0",
]
web = [
    "reflex>=0.6.0",
]
dev = [
    "ruff>=0.10.0",
    "mypy>=1.15.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyomnix*"]
exclude = ["tests*", "docs*", "examples*", "*.tests", "*.tests.*"]

[project.scripts]
gui_pan_color = "pyomnix.data_process:DataManipulator.gui_pan_color"
gui_easy_data = "pyomnix.data_process.easy_gui:gui_easy_data"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pyomnix = ["pltconfig/pan-colors.json", "agents/sql/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []
